# samsul

./: app.py  devserver.sh  main.py  private.pem  public.pem  pyproject.toml
.idx/: dev.nix
auth/: auth.py  statichtml.py
config/: config.py
core/: file.py
html/: chat.js  index.html
llm/: llm.py
router/: auth.py  chat.py  document.py
tests/test_auth/: test_auth.py
tests/test_router/: test_auth.py  test_chat.py
